Renamed rescan to rescrape
